# deepsolver

./: ChangeLog  Makefile.am  autogen.sh  configure.in
doc/user-manual/ru/: excluded.tex  spec.tex  title.tex  user-manual.tex
etc/: ds.conf
etc/conf.d/: altlinux-release.conf  msp.repo  sisyphus.conf  sisyphus.repo
lib/: AbstractFetchListener.h  AbstractOperationContinueRequest.h  AbstractPackageBackEnd.h  AbstractPackageRecipient.h  ConfigCenter.cpp  ConfigData.h  DeepsolverExceptions.h  DefaultValues.h  FilesFetch.cpp  FilesFetch.h  IndexCore.cpp  Makefile.am  OperationCore.cpp  OperationCore.h  PkgUrlsFile.cpp  PkgUrlsFile.h  PkgUtils.cpp  PkgUtils.h  Repository.cpp  Repository.h  TransactionIterator.cpp  TransactionIterator.h
lib/deepsolver/: AbstractContinueRequest.h  AbstractFetchListener.h  AbstractOperationContinueRequest.h  AbstractPackageBackEnd.h  AbstractPackageRecipient.h  AbstractPackageScope.h  AbstractPkgBackEnd.h  AbstractPkgRecipient.h  AbstractSatSolver.h  AbstractTaskSolver.h  AbstractTaskTranslatorOutput.h  AbstractTransactionListener.h  AutoReleaseStrings.h  CliParser.cpp  CliParser.h  ConfigAdapter.cpp  ConfigAdapter.h  ConfigCenter.cpp  ConfigCenter.h  ConfigData.h  ConfigFile.cpp  ConfigFile.h  CurlInterface.cpp  CurlInterface.h  DateTime.h  Dichotomy.h  Directory.cpp  Directory.h  ExceptionMessagesEn.cpp  ExceptionMessagesEn.h  File.cpp  File.h  FilesFetch.cpp  FilesFetch.h  GzipInterface.cpp  GzipInterface.h  IndexCore.cpp  IndexCore.h  InfoCore.cpp  InfoCore.h  (+94 more)
lib/os/: File.cpp  File.h  Process.cpp  Process.h
lib/repo/: RepoParams.h
lib/rpm/: RpmBackEnd.cpp  RpmBackEnd.h  RpmFileHeaderReader.cpp  RpmInstalledPackagesIterator.cpp  RpmTransaction.cpp  RpmTransaction.h
lib/transact/: AbstractPackageScope.h  AbstractSatSolver.h  AbstractTaskSolver.h  AbstractTaskTranslatorOutput.h  LibMinisatSolver.cpp  PackageScope.cpp  PackageScope.h  PackageSelection.cpp  PackageSelection.h  PostponedRequire.cpp  PostponedRequire.h  SatWriter.cpp  SatWriter.h  TaskSolver.cpp  TaskSolver.h  TaskTranslator.cpp  TaskTranslator.h  TaskTranslatorOutputOptimization.cpp  TaskTranslatorOutputOptimization.h
lib/utils/: TinyFileDownload.cpp  TinyFileDownload.h
programs/: AlwaysTrueContinueRequest.h  CliParser.cpp  CliParser.h  FilesFetchProgress.cpp  FilesFetchProgress.h  Makefile.am  Messages.cpp  Messages.h  PackageListPrinting.cpp  PackageListPrinting.h  PkgListPrinting.cpp  PkgListPrinting.h  TransactionProgress.cpp  TransactionProgress.h  ds-conf.cpp  ds-install.cpp  ds-patch.cpp  ds-provides.cpp  ds-remove.cpp  ds-repo.cpp  ds-require.cpp  ds-snapshot.cpp  ds-update.cpp
tests/: Makefile.am
tests/integrity/provide-map/: test.cpp
tests/integrity/unmets/: test.cpp
tests/messages/: Makefile.am  messages.cpp
tests/regression/gzip/: test.cpp
tests/regression/md5/: test.cpp
tests/regression/ver/: test.cpp
tests/regression/zlib/: test.cpp
tests/system-imitation/: Makefile.am  system-imitation.cpp
transact/: RpmTransaction.h  makefile  rpmtrans.cpp
